<resources>
    <string name="app_name">My Application</string>
    <string name="slogan">You order. We Deliver</string>
    <string name="password"> Password</string>
    <string name="email"> e-mail address</string>
    <string name="cell_no">Enter Cell No.</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="Username">Username</string>
    <string name="confirm_password">Confirm Password</string>

</resources>
