<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".login">

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="238dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:background="@drawable/btn_white"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="238dp"
        android:layout_height="41dp"
        android:layout_centerInParent="true"
        android:background="@drawable/btn_white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="@string/password" />

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:text="Log In"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold" />
    <Button
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="181dp"
        android:background="@drawable/btn_round"
        android:backgroundTint="@drawable/btn_round"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/txtForgotP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="144dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"/>
</RelativeLayout>